# inteligenciomica_eval

./: .gitignore  .importlinter  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  system_prompt.txt
.github/workflows/: ci.yml
config/: experiment_round1.yaml  model_registry.yaml
docs/: arquitetura_detalhada_validacao_inteligenciomica.md  auditoria-completa-inteligenciomica-eval-2026-06-07.md  judge_validation_report.md  m3_tarefas_309_310.md  m4_tarefa_401.md  m4_tarefa_402.md  m4_tarefa_403.md  m4_tarefa_404.md  m4_tarefa_405.md  m4_tarefa_406.md  m4_tarefa_407.md  m4_tarefa_408.md  m4_tarefa_409.md  m6_tarefas_601.md  m6_tarefas_601_corrigido.md  m6_tarefas_602.md  m6_tarefas_603.md  m6_tarefas_604.md  m6_tarefas_605.md  operations_manual.md  prompts_m0_tarefas_001_006.md  prompts_m0_tarefas_007_012.md  prompts_m1_tarefas_013_021.md  prompts_m1_tarefas_013_021_corrigido.md  prompts_m2_tarefas_022_028.md  prompts_m3_tarefa_309.md  prompts_m3_tarefa_310.md  prompts_m3_tarefa_311.md  prompts_m3_tarefa_312_integration_gate.md  prompts_m3_tarefa_313_contrato_benchmark.md  prompts_m3_tarefa_314_observabilidade.md  prompts_m3_tarefa_315_acuracia_documental.md  prompts_m3_tarefa_316_fidelidade_prompt.md  prompts_m3_tarefa_317_smoke_fix_modelo.md  prompts_m3_tarefas_301_310.md  prompts_m4_tarefas_401_409_corrigido.md  prompts_m5_tarefa_315_acuracia_documental.md  prompts_m6_tarefa_606_manual.md  prompts_m6_tarefa_607_doc_sync.md  security_review.md  (+1 more)
docs/adr/: ADR-013-round2-funnel.md  ADR-014-server-mode-external.md  ADR-015-prompt-geracao-versionado.md
docs/dev-log/: M0_TAREFA-001_A_bootstrap-repositorio.md  M0_TAREFA-001_B_bootstrap-repositorio.md  M0_TAREFA-002_A_hierarquia-excecoes-dominio.md  M0_TAREFA-002_B_auditoria-hierarquia-excecoes.md  M0_TAREFA-003_A_value-objects-dominio.md  M0_TAREFA-003_B_auditoria-value-objects.md  M0_TAREFA-003_C_correcoes-auditoria-value-objects.md  M0_TAREFA-004_A_entidades-dominio.md  M0_TAREFA-004_B_auditoria-entidades-dominio.md  M0_TAREFA-005_A_ports-protocols-domain.md  M0_TAREFA-005_B_auditoria-ports-protocols.md  M0_TAREFA-006_A_final-score-calculator.md  M0_TAREFA-006_B_auditoria-final-score.md  M0_TAREFA-007_A_rank-score-calculator.md  M0_TAREFA-007_B_auditoria-rank-score.md  M0_TAREFA-008_A_aggregation-service.md  M0_TAREFA-008_B_auditoria-aggregation-service.md  M0_TAREFA-009_A_parquet-storage.md  M0_TAREFA-009_B_auditoria-parquet-storage.md  M0_TAREFA-009_C_correcoes-auditoria-parquet-storage.md  M0_TAREFA-010_A_config-yaml-schema-provenance-dryrun.md  M0_TAREFA-010_B_auditoria-config-dry-run.md  M0_TAREFA-011_A_fakes-factories.md  M0_TAREFA-011_B_auditoria-fakes-factories.md  M0_TAREFA-012_A_e2e-stub-min-round.md  M0_TAREFA-012_B_auditoria-e2e-stub.md  M0_TAREFA-012_C_reauditoria-e2e-stub.md  M1_TAREFA-013_A_qdrant-gold-chunk-adapters.md  M1_TAREFA-013_B_auditoria-qdrant-gold-chunk.md  M1_TAREFA-013_C_correcoes-auditoria.md  M1_TAREFA-013_D_avaliacao-conformidade-spec-v11.md  M1_TAREFA-013_E_reauditoria-prompt-b-v11.md  M1_TAREFA-013_F_async-search-close-fix.md  M1_TAREFA-013_G_auditoria-async-search-close-fix.md  M1_TAREFA-014_A_vllm-generator-adapter.md  M1_TAREFA-014_B_auditoria-vllm-generator-v11.md  M1_TAREFA-014_C_correcao-mock-transport.md  M1_TAREFA-014_D_async-first-fix.md  M1_TAREFA-014_E_avaliacao-conformidade-spec-v11.md  M1_TAREFA-014_F_reauditoria-correcao-mock-transport.md  (+173 more)
scripts/: mutation_gate.py  validate_manual.py
src/inteligenciomica_eval/: __init__.py  cli.py
src/inteligenciomica_eval/application/: aggregate_results.py  compute_metrics_use_case.py  judge_validation.py  statistical_analysis.py
src/inteligenciomica_eval/domain/: entities.py  errors.py  ports.py  value_objects.py
src/inteligenciomica_eval/infrastructure/: factories.py  masking.py  wiring.py
src/inteligenciomica_eval/visualization/: matplotlib_adapter.py
tests/contract/: BATCH_INVARIANT_CHECKLIST.md  test_batch_invariant_contract.py
tests/e2e/: _harness.py  test_full_pipeline_m2.py  test_full_pipeline_m4.py  test_m1_smoke_e2e.py  test_m3_full_cycle.py  test_min_round_stub.py
tests/factories/: __init__.py  factories.py
tests/fakes/: __init__.py  data_readers.py  generation.py  metrics.py  retrieval.py  servers.py  storage.py
tests/fixtures/: annotations.jsonl  e2e_m4_aggregates.json  e2e_m4_annotation.jsonl  e2e_m4_stats_report.json  gold_chunks.jsonl  integration_question.json  production_messages_fixture.json  prometheus_judge_response_malformed.json  prometheus_judge_response_valid.json  vllm_generator_response.json
tests/golden/: aggregate_results_expected.json  aggregation_cases.json  compute_metrics_expected.json  det_metrics_golden.json  det_metrics_pt_golden.json  e2e_m2_expected.json  e2e_m3_expected.json  e2e_min_round_expected.json  final_score_cases.json  metrics_pipeline_m2_expected.json  ragas_pt_smoke.json  rank_score_cases.json  stats_friedman_expected.json  stats_report_expected.json  stats_wilcoxon_expected.json
tests/integration/: test_m1_pipeline_integration.py  test_metrics_pipeline_m2.py
tests/integration/adapters/: test_deterministic_integration.py  test_qdrant_retriever_integration.py  test_ragas_smoke.py  test_rubric_judge_integration.py  test_stats_integration.py  test_vllm_server_manager.py
tests/integration/repositories/: test_parquet_annotation.py  test_parquet_storage.py
tests/integration/visualization/: test_matplotlib_adapter_integration.py
tests/mutation/: mutation_report.txt
tests/security/: test_prompt_injection.py
tests/security/reports/: .gitignore  detect_secrets_baseline.json
tests/unit/: test_cli_annotate_export.py  test_cli_m4_subcommands.py  test_cli_smoke.py  test_cli_smoke_command.py  test_imports.py  test_validate_manual.py
tests/unit/adapters/: test_html_report.py  test_stats_adapters.py
tests/unit/application/: test_aggregate_results_use_case.py  test_compute_metrics_use_case.py  test_ingest_annotation.py  test_judge_validation.py  test_statistical_analysis.py
tests/unit/cli/: test_dry_run.py  test_run_external.py  (+1 more)
(+90 files in other folders)
