[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inteligenciomica-eval"
version = "0.1.0"
description = "Subsistema de Validação InteligenciÔmica"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.0",
    "polars>=1.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.7.1",
    "openai>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "jinja2>=3.0",
    "ragas>=0.3.1",
    "langchain-openai>=1.2.2",
    "langchain-community>=0.4.2",
    "sentence-transformers>=5.5.1",
    "langchain-google-vertexai>=3.2.3",
    "pillow>=12.2.0",
    "bert-score>=0.3.13",
    "rouge-score>=0.1.2",
]

[project.scripts]
ielm-eval = "inteligenciomica_eval.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.0",
    "pytest-cov>=7.0",
    "hypothesis>=6.0",
    "coverage[toml]>=7.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "import-linter>=2.0",
    "pre-commit>=3.0",
    "polyfactory>=3.0",
    "freezegun>=1.0",
    "respx>=0.20",
    "mutmut>=2.0",
    "types-pyyaml>=6.0",
    "testcontainers[qdrant]>=4.3",
    "pytest-asyncio>=0.23",
    "pytest-randomly>=3.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inteligenciomica_eval"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print (no bare print() in production code)
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["inteligenciomica_eval"]

# ---------------------------------------------------------------------------
# Mypy — strict mode on src only
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = ["src"]
files = ["src"]

[[tool.mypy.overrides]]
module = ["pandas.*", "pyarrow.*", "qdrant_client.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tenacity.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "ragas.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langchain_core.*",
    "langchain_google_vertexai.*",
    "langchain_huggingface.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["bert_score.*", "rouge_score.*"]
ignore_missing_imports = true

# Test-only deps without type stubs (integration / smoke E2E).
[[tool.mypy.overrides]]
module = ["docker.*", "testcontainers.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests — fast, no I/O",
    "integration: Integration tests — real adapters, containers",
    "e2e: End-to-end tests — full-stack, slow",
    "contract: Contract tests — cross-layer invariants, no network/GPU",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/inteligenciomica_eval"]

# NOTE: the 85% gate is enforced via the explicit ``--cov-fail-under=85`` flag in the
# `unit` CI job and the documented local gate command — NOT via a config default. This
# lets single-suite runs (e.g. the `integration` job / Prompt B command) report coverage
# without failing on their naturally-lower standalone percentage.
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
